[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/visual/CommandLine.gd" type="Script" id=1]
[ext_resource path="res://scripts/visual/Selection.gd" type="Script" id=2]
[ext_resource path="res://scenes/InventoryItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/visual/Menu.gd" type="Script" id=5]
[ext_resource path="res://scripts/visual/ViewportContainer.gd" type="Script" id=6]
[ext_resource path="res://scripts/Synchronizer.gd" type="Script" id=7]
[ext_resource path="res://scripts/node/Interpreter.gd" type="Script" id=8]
[ext_resource path="res://scenes/Tools.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/scripts/RecipeDetails.gd" type="Script" id=10]
[ext_resource path="res://scenes/Inventory.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/scripts/NavigationPanel.gd" type="Script" id=12]
[ext_resource path="res://fonts/default_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://scenes/scripts/SimulationDetails.gd" type="Script" id=14]
[ext_resource path="res://scenes/scripts/InsertToolDetails.gd" type="Script" id=15]
[ext_resource path="res://scenes/scripts/Interface.gd" type="Script" id=16]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 13 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 1 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="Panel" parent="HBox"]
margin_right = 1920.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="HBox" type="HBoxContainer" parent="HBox/Menus"]
margin_right = 164.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SimulationMenu" type="MenuButton" parent="HBox/Menus/HBox"]
margin_right = 93.0
margin_bottom = 29.0
text = "Simulation"
items = [ "Save", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false, "Clear", null, 0, false, false, 2, 0, null, "", false, "Quit", null, 0, false, false, 3, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugMenu" type="MenuButton" parent="HBox/Menus/HBox"]
margin_left = 97.0
margin_right = 160.0
margin_bottom = 29.0
focus_mode = 2
text = "Debug"
items = [ "Test Reach", null, 0, false, false, 0, 0, null, "", false, "Fill Shelves", null, 0, false, false, 1, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplit" type="HSplitContainer" parent="HBox"]
margin_top = 34.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
size_flags_vertical = 3
split_offset = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Control" parent="HBox/HSplit"]
margin_right = 300.0
margin_bottom = 1046.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 12 )

[node name="TabContainer" type="TabContainer" parent="HBox/HSplit/MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" parent="HBox/HSplit/MainPanel/TabContainer" instance=ExtResource( 9 )]
margin_top = 41.0

[node name="Recipes" type="Panel" parent="HBox/HSplit/MainPanel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/MainPanel/TabContainer/Recipes"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HBox/HSplit/MainPanel/TabContainer/Recipes/VBox"]
margin_right = 192.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/minimum_spaces = 8
placeholder_text = "Rechercher..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="HBox/HSplit/MainPanel/TabContainer/Recipes/VBox"]
margin_top = 28.0
margin_right = 192.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplit" type="HSplitContainer" parent="HBox/HSplit"]
margin_left = 312.0
margin_right = 1920.0
margin_bottom = 1046.0
mouse_filter = 1
split_offset = 1080

[node name="VSplit" type="VSplitContainer" parent="HBox/HSplit/HSplit"]
margin_right = 1280.0
margin_bottom = 1046.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
split_offset = 10000

[node name="TabContainer" type="TabContainer" parent="HBox/HSplit/HSplit/VSplit"]
margin_right = 1280.0
margin_bottom = 934.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 1
tab_align = 0

[node name="Simulation" type="ViewportContainer" parent="HBox/HSplit/HSplit/VSplit/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
stretch = true
script = ExtResource( 6 )

[node name="Viewport" type="Viewport" parent="HBox/HSplit/HSplit/VSplit/TabContainer/Simulation"]
size = Vector2( 1272, 889 )
handle_input_locally = false
msaa = 3
render_target_update_mode = 3

[node name="Scene" parent="HBox/HSplit/HSplit/VSplit/TabContainer/Simulation/Viewport" instance=ExtResource( 4 )]

[node name="Camera" type="Panel" parent="HBox/HSplit/HSplit/VSplit/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Recette" type="Panel" parent="HBox/HSplit/HSplit/VSplit/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory" parent="HBox/HSplit/HSplit/VSplit/TabContainer" instance=ExtResource( 11 )]
visible = false
margin_top = 41.0

[node name="HedaCuisine" type="Panel" parent="HBox/HSplit/HSplit/VSplit/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 41.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Console" type="Panel" parent="HBox/HSplit/HSplit/VSplit"]
margin_top = 946.0
margin_right = 1280.0
margin_bottom = 1046.0
rect_min_size = Vector2( 0, 100 )

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/HSplit/VSplit/Console"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandLine" type="LineEdit" parent="HBox/HSplit/HSplit/VSplit/Console/VBox"]
margin_right = 1280.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 23 )
size_flags_horizontal = 3
placeholder_text = "Type command here..."
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="Label" parent="HBox/HSplit/HSplit/VSplit/Console/VBox"]
margin_top = 37.0
margin_right = 1280.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailsPanel" type="Panel" parent="HBox/HSplit/HSplit"]
margin_left = 1292.0
margin_right = 1608.0
margin_bottom = 1046.0
rect_min_size = Vector2( 200, 0 )

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SimulationDetails" type="PanelContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox"]
pause_mode = 2
margin_right = 306.0
margin_bottom = 97.0
size_flags_horizontal = 3
script = ExtResource( 14 )

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails"]
margin_left = 7.0
margin_top = 7.0
margin_right = 299.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="ObjectName" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox"]
margin_right = 292.0
margin_bottom = 23.0
text = "Simulation"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox/ObjectName"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="HBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox"]
margin_top = 27.0
margin_right = 292.0
margin_bottom = 50.0

[node name="Name" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox/Speed"]
margin_right = 47.0
margin_bottom = 23.0
text = "Speed"

[node name="Speed" type="HSlider" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox/Speed"]
margin_left = 51.0
margin_right = 292.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.25
max_value = 4.0
step = 0.25
value = 1.0

[node name="Stop" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox"]
pause_mode = 2
margin_top = 54.0
margin_right = 292.0
margin_bottom = 83.0
text = "Pause"

[node name="InsertToolDetails" type="PanelContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox"]
pause_mode = 2
margin_top = 101.0
margin_right = 306.0
margin_bottom = 198.0
size_flags_horizontal = 3
script = ExtResource( 15 )

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails"]
margin_left = 7.0
margin_top = 7.0
margin_right = 299.0
margin_bottom = 90.0
size_flags_horizontal = 3

[node name="ObjectName" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails/VBox"]
margin_right = 292.0
margin_bottom = 23.0
text = "Insert tool"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails/VBox/ObjectName"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JarIdLabel" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails/VBox"]
margin_top = 27.0
margin_right = 292.0
margin_bottom = 50.0
text = "Jar id"

[node name="JarId" type="OptionButton" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails/VBox"]
margin_top = 54.0
margin_right = 292.0
margin_bottom = 83.0

[node name="Selection" type="PanelContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox"]
margin_top = 202.0
margin_right = 306.0
margin_bottom = 764.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection"]
margin_left = 7.0
margin_top = 7.0
margin_right = 299.0
margin_bottom = 555.0
size_flags_horizontal = 3

[node name="ObjectName" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox"]
margin_right = 292.0
margin_bottom = 23.0
text = "Objet 123"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/ObjectName"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="HSplitContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox"]
margin_top = 27.0
margin_right = 292.0
margin_bottom = 50.0
split_offset = 70

[node name="Name" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/X"]
margin_right = 79.0
margin_bottom = 23.0
text = "X"

[node name="Value" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/X"]
margin_left = 91.0
margin_right = 292.0
margin_bottom = 23.0
text = "10.0"

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/X/Value"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="HSplitContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox"]
margin_top = 54.0
margin_right = 292.0
margin_bottom = 77.0
split_offset = 70

[node name="Name" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/Y"]
margin_right = 79.0
margin_bottom = 23.0
text = "Y"

[node name="Value" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/Y"]
margin_left = 91.0
margin_right = 292.0
margin_bottom = 23.0
text = "10.0"

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/Y/Value"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Z" type="HSplitContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox"]
margin_top = 81.0
margin_right = 292.0
margin_bottom = 104.0
split_offset = 70

[node name="Name" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/Z"]
margin_right = 79.0
margin_bottom = 23.0
text = "Z"

[node name="Value" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/Z"]
margin_left = 91.0
margin_right = 292.0
margin_bottom = 23.0
text = "10.0"

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/Z/Value"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JarDetails" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox"]
margin_top = 108.0
margin_right = 292.0
margin_bottom = 548.0

[node name="Label" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_right = 292.0
margin_bottom = 23.0
text = "Ingredients:"

[node name="MarginContainer" type="MarginContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 27.0
margin_right = 292.0
margin_bottom = 77.0
custom_constants/margin_left = 10

[node name="Ingredients" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/MarginContainer"]
margin_left = 10.0
margin_right = 292.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/MarginContainer/Ingredients"]
margin_right = 282.0
margin_bottom = 23.0
text = "10.0 g farine"

[node name="Label2" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/MarginContainer/Ingredients"]
margin_top = 27.0
margin_right = 282.0
margin_bottom = 50.0
text = "10.0 g sucre"

[node name="IngredientQuantity" type="SpinBox" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 81.0
margin_right = 292.0
margin_bottom = 114.0
max_value = 10000.0

[node name="LineEdit" type="LineEdit" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 118.0
margin_right = 292.0
margin_bottom = 151.0
placeholder_text = "Filtrer..."

[node name="IngredientFood" type="ItemList" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 155.0
margin_right = 292.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddIngredient" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 279.0
margin_right = 292.0
margin_bottom = 308.0
text = "Add ingredient"

[node name="Grab" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 312.0
margin_right = 292.0
margin_bottom = 341.0
text = "Grab"

[node name="Weigh" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 345.0
margin_right = 292.0
margin_bottom = 374.0
text = "Weigh"

[node name="Store" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 378.0
margin_right = 292.0
margin_bottom = 407.0
text = "Store"

[node name="Empty" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails"]
margin_top = 411.0
margin_right = 292.0
margin_bottom = 440.0
text = "Empty"

[node name="RecipeDetails" type="PanelContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox"]
margin_top = 768.0
margin_right = 306.0
margin_bottom = 988.0
grow_horizontal = 0
script = ExtResource( 10 )

[node name="VBox" type="VBoxContainer" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails"]
margin_left = 7.0
margin_top = 7.0
margin_right = 299.0
margin_bottom = 213.0
grow_horizontal = 0

[node name="Title" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox"]
margin_right = 292.0
margin_bottom = 23.0
grow_horizontal = 0
text = "Recipe"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox/Title"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.415686, 0.415686, 0.415686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox"]
margin_top = 27.0
margin_right = 292.0
margin_bottom = 50.0
text = "Ingredients"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItem" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 292.0
margin_bottom = 68.0

[node name="InventoryItem2" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 292.0
margin_bottom = 86.0

[node name="InventoryItem3" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 292.0
margin_bottom = 104.0

[node name="InventoryItem4" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 292.0
margin_bottom = 122.0

[node name="InventoryItem5" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 126.0
margin_right = 292.0
margin_bottom = 140.0

[node name="Button" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox"]
margin_top = 144.0
margin_right = 292.0
margin_bottom = 173.0
text = "Bring ingredients"

[node name="Button2" type="Button" parent="HBox/HSplit/HSplit/DetailsPanel/VBox/RecipeDetails/VBox"]
margin_top = 177.0
margin_right = 292.0
margin_bottom = 206.0
text = "Cook"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -29.0
margin_right = 41.5
margin_bottom = 29.0
window_title = "Error!"

[node name="Synchronizer" type="Node" parent="."]
script = ExtResource( 7 )

[node name="PullStateRequest" type="HTTPRequest" parent="Synchronizer"]

[node name="PushStateRequest" type="HTTPRequest" parent="Synchronizer"]

[node name="Interpreter" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="value_changed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox/Speed/Speed" to="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails" method="_on_Speed_value_changed"]
[connection signal="pressed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails/VBox/Stop" to="HBox/HSplit/HSplit/DetailsPanel/VBox/SimulationDetails" method="_on_Stop_pressed"]
[connection signal="visibility_changed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails" to="HBox/HSplit/HSplit/DetailsPanel/VBox/InsertToolDetails" method="_on_InsertToolDetails_visibility_changed"]
[connection signal="pressed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/AddIngredient" to="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection" method="_on_AddIngredient_pressed"]
[connection signal="pressed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/Grab" to="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection" method="_on_Grab_pressed"]
[connection signal="pressed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/Weigh" to="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection" method="_on_Weigh_pressed"]
[connection signal="pressed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/Store" to="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection" method="_on_Store_pressed"]
[connection signal="pressed" from="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection/VBox/JarDetails/Empty" to="HBox/HSplit/HSplit/DetailsPanel/VBox/Selection" method="_on_Empty_pressed"]
